<resources>
    <string name="app_name">AllButtonsSample</string>
    <string name="action_settings">Settings</string>
    <string name="toggle_turn_on">Turn On</string>
    <string name="toggle_turn_off">Turn Off</string>
    <string name="btn_display">Display</string>
    <string name="example_edittext">Example showing EditText</string>
    <string name="show_the_text">Show the Text</string>
    <string name="enter_text">text changes</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="title_activity_display_message">My Message</string>
    <string name="nextscreen">Next Screen</string>
    <string name="title_activity_second_screen">SecondScreen</string>
    <string name="title_activity_radio_button_sample">RadioButtonSample</string>
    <string name="spinnersPage">Spinner Sample</string>
    <string name="radioButtonPageName">Radio Button Sample</string>
    <string name="title_activity_overflow_menu">OverflowMenu</string>

    <string name="red_string">Red screen</string>
    <string name="overflowMenuSample">OverFlow Example</string>
    <string name="title_activity_long_click">LongClick</string>
    <string name="title_activity_drag_and_drop">DragAndDrop</string>
    <string name="dragtext">Drag me ;)</string>
    <string name="title_activity_drag">DragActivity</string>
</resources>
